Patch v0.04 Testing how to read files